# quicker-actix

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 001_create_users.sql  002_create_tweets.sql  003_create_likes.sql  004_create_follows.sql
src/: auth.rs  main.rs  models.rs
static/: index.html
