[package]
name = "rust-31st-dec"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
dotenv = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9.2"
validator = { version = "0.16", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
